NXP-13234: cleanup/format old code